# Ensea-CoHoMa-III-ROS

./: .gitignore  TODO.mkd  fastdds.service  install.mkd  notes_camera.mkd  readme.md  top_akm_dl_robot.urdf
.devcontainer/: .env  Dockerfile  Dockerfile_urdf_tutorial  Dockerfile_usb_cam  devcontainer.json  docker-compose.modelibot.yaml  docker-compose.usbcamera.yaml  docker-compose.yaml  env.example
local_usbcam/: package.xml  setup.cfg  setup.py
local_usbcam/config/: image.rviz
local_usbcam/launch/: demo_launch.py  publish_hevc.launch.py  publisher.launch.py  republisher_hevc_rviz.launch.py
local_usbcam/local_usbcam/: start_cam.py
modelidar/: CMakeLists.txt  __setup.py  modelidar.xml  package.xml  setup.cfg  setup.py
modelidar/config/: modelidar_controllers.yaml  teleop.yaml  twist-mux.yaml
modelidar/hardware/: modelidar_system.cpp
modelidar/hardware/include/modelidar/: modelidar_comms.hpp  modelidar_system.hpp  wheel.hpp
modelidar/launch/: demo_launch.py  modelidar.launch.py  view_robot.launch.py
modelidar/meshes/: IMU-Support.stl
modelidar/modelidar/: mock_state_publisher.py
modelidar/urdf/: materials.xacro  ros2_control.xacro  view_robot.rviz  wild_thumper.rviz  wild_thumper.urdf.xacro
turtle_docker/: CMakeLists.txt  package.xml
turtle_docker/src/: turtledock.cpp
turtle_docker/src/urdf/: R2D2.xacro  example.urdf  first_model.urdf
wild_thumper/: package.xml  setup.cfg  setup.py
wild_thumper/launch/: demo_launch.py
wild_thumper/meshes/: Velodyne_PartBody.stl  rplidar_a2.stl
wild_thumper/urdf/: urdf_wild_thumper.urdf.xacro  urdf_wild_thumper_with_manipulator.urdf.xacro  view_robot.rviz
